refactoring: the util folder has been moved; fixed formatting; names have been corrected; optimized the code